--- a/app/src/app/components/register/register.component.html
+++ b/app/src/app/components/register/register.component.html
@@ -15,7 +15,6 @@
     <mat-form-field>
       <input formControlName="passwordConfirm" type="password" matInput placeholder="Repeat password" required>
     </mat-form-field>
-    <button style="margin: 0 auto;" color="primary" mat-raised-button [disabled]="!formValid()">Create an account
-    </button>
+    <button color="primary" mat-raised-button [disabled]="!formValid()">Submit</button>
   </form>
 </mat-card>
