Add reports, update records layout

--- a/app/src/app/components/record-form/record-form.component.html
+++ b/app/src/app/components/record-form/record-form.component.html
@@ -7,7 +7,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <mat-form-field>
-      <input formControlName="distance" type="number" matInput placeholder="Distance">
+      <input formControlName="distance" type="number" matInput placeholder="Distance (meters)">
     </mat-form-field>
     <mat-form-field>
       <input formControlName="duration" type="number" matInput placeholder="Time">
