--- a/app/src/app/components/dashboard/dashboard.component.html
+++ b/app/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<button mat-button routerLink="records">Records</button>
-<button mat-button routerLink="reports">Reports</button>
+<button mat-button routerLink="records" routerLinkActive="mat-raised-button">Records</button>
+<button mat-button routerLink="reports" routerLinkActive="mat-raised-button">Reports</button>
 <router-outlet></router-outlet>
