--- a/app/src/app/components/records/records.component.html
+++ b/app/src/app/components/records/records.component.html
@@ -1,7 +1,7 @@
 <!--suppress HtmlUnknownAttribute -->
+<div class="container">
 <div>
-  <button mat-mini-fab routerLink="/add-record"><i class="material-icons">add_box</i></button>
-  <div *ngIf="dataSource" class="example-container mat-elevation-z8">
+  <div *ngIf="dataSource" class="table-container mat-elevation-z8">
     <mat-table #table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="date">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Date</mat-header-cell>
@@ -9,7 +9,7 @@
       </ng-container>
       <ng-container matColumnDef="duration">
         <mat-header-cell *matHeaderCellDef> Time</mat-header-cell>
-        <mat-cell *matCellDef="let record"> {{record.duration}}</mat-cell>
+        <mat-cell *matCellDef="let record"> {{record.duration | duration}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="distance">
         <mat-header-cell *matHeaderCellDef> Distance (Metres)</mat-header-cell>
@@ -39,4 +39,9 @@
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div>
+</div>
+<div style="padding-left: 16px;">
+  <div>Add New Record</div>
+<button mat-mini-fab routerLink="/add-record"><i class="material-icons">add_box</i></button>
+</div>
 </div>
