--- a/app/src/app/components/records/records.component.scss
+++ b/app/src/app/components/records/records.component.scss
@@ -2,10 +2,22 @@
   align-items: center;
 }
 
-.example-container {
+.container {
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  margin-left: 24px;
+  margin-top: 24px;
+}
+
+
+.table-container {
   display: flex;
   flex-direction: column;
-  min-width: 300px;
+  min-width: 640px;
   max-width: 640px;
-  margin-left: 24px;
 }
