--- a/app/src/app/components/reports/reports.component.html
+++ b/app/src/app/components/reports/reports.component.html
@@ -1,3 +1,21 @@
-<p>
-  reports works!
-</p>
+<!--suppress HtmlUnknownAttribute -->
+<div>
+  <div *ngIf="dataSource" class="table-container mat-elevation-z8">
+    <mat-table #table [dataSource]="dataSource">
+      <ng-container matColumnDef="week">
+        <mat-header-cell *matHeaderCellDef> Week</mat-header-cell>
+        <mat-cell *matCellDef="let reportRow"> {{reportRow.week}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="averageDistance">
+        <mat-header-cell *matHeaderCellDef> Average distance (Metres)</mat-header-cell>
+        <mat-cell *matCellDef="let reportRow"> {{reportRow.averageDistance}}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="averageSpeed">
+        <mat-header-cell *matHeaderCellDef> Average speed (Km/hr)</mat-header-cell>
+        <mat-cell *matCellDef="let reportRow"> {{reportRow.averageSpeed.toFixed(2)}}</mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
+</div>
