--- a/app/src/app/components/app/app.component.html
+++ b/app/src/app/components/app/app.component.html
@@ -4,10 +4,10 @@
     <span class="example-spacer"></span>
     <form *ngIf="!isLoggedIn" [formGroup]="loginForm" (ngSubmit)="onLoginFormSubmit(loginForm)">
     <mat-form-field floatLabel="never" [hideRequiredMarker]="true" style="margin-right: 12px;">
-      <input formControlName="username" matInput placeholder="Email">
+      <input formControlName="username" name="email" matInput placeholder="Email">
     </mat-form-field>
     <mat-form-field floatLabel="never" [hideRequiredMarker]="true">
-      <input formControlName="password" matInput placeholder="Password">
+      <input formControlName="password" type="password" name="password" matInput placeholder="Password">
     </mat-form-field>
     <button mat-raised-button color="primary" [disabled]="!loginForm.valid">Log In</button>
     </form>
