--- a/app/src/app/components/records/records.component.html
+++ b/app/src/app/components/records/records.component.html
@@ -2,7 +2,7 @@
 <div class="container">
 <div>
   <div *ngIf="dataSource" class="table-container mat-elevation-z8">
-    <mat-table #table [dataSource]="dataSource" matSort>
+    <mat-table #table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" [@listAnimation]="dataSource.data.length">
       <ng-container matColumnDef="date">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Date</mat-header-cell>
         <mat-cell *matCellDef="let record"> {{record.date | date}}</mat-cell>
