--- a/app/src/app/components/register/register.component.html
+++ b/app/src/app/components/register/register.component.html
@@ -1,5 +1,6 @@
 <mat-card class="form-card">
   <form [formGroup]="form" (ngSubmit)="onSubmit(form)">
+    <h3 class="title">Create an account</h3>
     <mat-form-field>
       <input formControlName="name" matInput placeholder="First name">
     </mat-form-field>
@@ -7,7 +8,7 @@
       <input formControlName="surname" matInput placeholder="Surname">
     </mat-form-field>
     <mat-form-field>
-      <input formControlName="username" matInput placeholder="Email" required>
+      <input formControlName="username" type="email" matInput placeholder="Email" required>
     </mat-form-field>
     <mat-form-field>
       <input formControlName="password" type="password" matInput placeholder="Password" required>
@@ -15,6 +16,9 @@
     <mat-form-field>
       <input formControlName="passwordConfirm" type="password" matInput placeholder="Repeat password" required>
     </mat-form-field>
+    <div class="form-error">
+      <div *ngIf="passwordMismatch">Passwords don't match</div>
+    </div>
     <button color="primary" mat-raised-button [disabled]="!formValid()">Submit</button>
   </form>
 </mat-card>
