--- a/app/src/app/components/register/register.component.scss
+++ b/app/src/app/components/register/register.component.scss
@@ -7,3 +7,16 @@
     margin: 0 auto;
   }
 }
+
+.form-error  {
+  min-height: 24px;
+  div {
+    font-size: 14px;
+    color: red;
+  }
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 12px;
+}
